[tool.poetry]
name = "aula-duckdb"
version = "0.1.0"
description = ""
authors = ["tuliovaleriano <mtuliovaleriano@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
streamlit = "^1.41.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
